fix select item label color on mobile, in dark mode

--- a/src/assets/styles/components/_select.scss
+++ b/src/assets/styles/components/_select.scss
@@ -319,6 +319,14 @@
       &:hover {
         background-color: var(--grey-30);
       }
+
+      &__text {
+        color: var(--grey-900);
+      }
+
+      &__meta {
+        color: var(--grey-500);
+      }
     }
 
     &--menu {
@@ -329,6 +337,16 @@
     }
     &__top, &__footer {
       border-color: var(--grey-40);
+    }
+
+    .select__modal {
+      .select__option__text {
+        color: var(--grey-900);
+
+        &__large {
+          color: var(--grey-900);
+        }
+      }
     }
   }
 }
